--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10",
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "postcss": "^8",
     "register-service-worker": "^1.7.2",
